Added Generic Notification Feature (named "bout-planning" but will be changed soon)
- Added Generic Notification Feature (named "bout-planning" but will be changed soon.
- Added an Angular Compiler Option
- Added "Hello, [username]" in client settings page

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -1,4 +1,5 @@
 <article>
+    <h1><p>Welcome, {{participantName}}!</p></h1>
     <nav>
         <ul>
             <li><button (click)="editContactInformation()">Contact information</button></li>
@@ -35,6 +36,7 @@
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
         <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
         <li><button (click)="nlmBoutPlanningModal()">Open up bout planning modal</button></li>
+        <li><button (click)="nlmBoutPlanningNotification()">Open up bout planning notification</button></li>
     </ul>
 </article>
 <article>
