--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -35,8 +35,8 @@
         <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
         <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
-        <li><button (click)="nlmBoutPlanningModal()">Open up bout planning modal</button></li>
-        <li><button (click)="nlmBoutPlanningNotification()">Open up bout planning notification</button></li>
+        <li><button (click)="genericMessagesModal()">Open up bout planning modal</button></li>
+        <li><button (click)="genericMessagesSendTest()">Open up bout planning notification</button></li>
     </ul>
 </article>
 <article>
