add nlm-related section in client/settings

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -34,9 +34,12 @@
         <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
         <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
-        <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
-        <li><button (click)="genericMessagesModal()">Open up bout planning modal</button></li>
-        <li><button (click)="genericMessagesSendTest()">Open up bout planning notification</button></li>
+        <ul>
+            <h4>NLM-related</h4>
+            <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
+            <li><button (click)="genericMessagesModal()">Open up generic messages modal</button></li>
+            <li><button (click)="genericMessagesSendTest()">Open up generic messages notification</button></li>
+        </ul>
     </ul>
 </article>
 <article>
