--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -156,7 +156,7 @@
 <form action="{% url 'dashboard-cohort-participant-notifications' cohort.id participant.heartsteps_id %}" method="POST">
     {% csrf_token %}
     <input type="hidden" name="message" value="Hi, this is a test message." />
-    <input type="hidden" name="module" value="generic-messages" />
+    <input type="hidden" name="module" value="generic_messages" />
     <input type="submit" value="Send test notification with generic_messages app" />
 </form>
 
