--- a/server/dashboard/templates/dashboard/dev-front-card5.html
+++ b/server/dashboard/templates/dashboard/dev-front-card5.html
@@ -7,6 +7,34 @@
     <div id="collapse5" class="collapse cardmargin" aria-labelledby="heading5" data-parent="#accordion">
         <ul>
             <li>
+                <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+                    {% csrf_token %}
+                    <input type="hidden" id="dev-command" value="generic-command" name="dev-command" />
+                    
+                    <div class="form-row">
+                        <div class="col">
+                            Perform a generic job
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col">
+                            <select class="form-select form-control m-1" id="generic-command" name="generic-command">
+                                <option selected>Select a generic job</option>
+                                {% for generic_command in generic_command_list %}
+                                    <option value="{{generic_command}}">{{generic_command}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Perform</button>
+                        </div>
+                    </div>
+                </form>
+            </li>
+            <li>
                 <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="send-notification" name="dev-command" />
@@ -124,40 +152,35 @@
             <li>
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
-                    <input type="hidden" id="dev-command" value="test_logs" name="dev-command" />
+                    <input type="hidden" id="dev-command" value="delete_hourly_tasks" name="dev-command" />
                     
                     <div class="form-row">
                         <div class="col">
-                            Insert a test log
+                            Delete an hourly-task
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="col">
-                            <button type="submit" class="btn btn-primary mb-2 m-1">Insert</button>
+                            <select class="form-select form-control m-1" id="hourly-task-id" name="hourly-task-id">
+                                <option selected>Select an hourly-task</option>
+                                {% for hourly_task in hourly_tasks %}
+                                    <option value="{{hourly_task.id}}">{{hourly_task.id}} | {{hourly_task.name}} | {{hourly_task.str}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Delete</button>
                         </div>
                     </div>
                 </form>
             </li>
 
-            <li>
-                <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                    {% csrf_token %}
-                    <input type="hidden" id="dev-command" value="view_logs" name="dev-command" />
-                    
-                    <div class="form-row">
-                        <div class="col">
-                            Dump All Logs under (subject="Unknown")
-                        </div>
-                    </div>
 
-                    <div class="form-row">
-                        <div class="col">
-                            <button type="submit" class="btn btn-primary mb-2 m-1">Dump</button>
-                        </div>
-                    </div>
-                </form>
-            </li>
+
+
         </ul>
     </div>
 </div>
