--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -1,5 +1,6 @@
 <article>
     <h1><p>Welcome, {{participantName}}!</p></h1>
+    {{participantTags}}
     <nav>
         <ul>
             <li><button (click)="editContactInformation()">Contact information</button></li>
@@ -34,12 +35,14 @@
         <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
         <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
+        <article *ngIf="participantTags.includes('NLM')" >
         <ul>
             <h4>NLM-related</h4>
             <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
             <li><button (click)="genericMessagesModal()">Open up generic messages modal</button></li>
             <li><button (click)="genericMessagesSendTest()">Open up generic messages notification</button></li>
         </ul>
+        </article>
     </ul>
 </article>
 <article>
