--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -14,7 +14,6 @@ page-home {
             width: 2em;
             height: 2em;
             overflow: hidden;
-
         }
     }
 
@@ -38,9 +37,8 @@ page-home {
     article {
         margin: 0.5em 0em;
     }
-    
-     > nav {
 
+    > nav {
         > * {
             display: block;
             position: relative;
@@ -56,7 +54,7 @@ page-home {
             white-space: nowrap;
         }
         > *:before {
-            content: ' ';
+            content: " ";
             mask-repeat: no-repeat;
             mask-position: 50% 50%;
             background-color: $color-gray-dark;
@@ -76,40 +74,47 @@ page-home {
         }
 
         .dashboard:before {
-            mask-image: url('../assets/dashboard.svg');
+            mask-image: url("../assets/dashboard.svg");
         }
         .planning:before {
-            mask-image: url('../assets/planning.svg');
+            mask-image: url("../assets/planning.svg");
         }
         .activities:before {
-            mask-image: url('../assets/stats.svg');
+            mask-image: url("../assets/stats.svg");
         }
         .library:before {
-            mask-image: url('../assets/library.svg');
+            mask-image: url("../assets/library.svg");
         }
         .settings:before {
-            mask-image: url('../assets/settings.svg');
+            mask-image: url("../assets/settings.svg");
         }
     }
-    
+
     @keyframes spinner {
-        to {transform: rotate(360deg);}
+        to {
+            transform: rotate(360deg);
+        }
     }
 
     .loading:before {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    margin-left: -10px;
-    border-radius: 50%;
-    border: 2px solid $color-gray-light;
-    border-top-color: $color-primary;
-    animation: spinner .6s linear infinite;
+        content: "";
+        box-sizing: border-box;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        margin-top: -10px;
+        margin-left: -10px;
+        border-radius: 50%;
+        border: 2px solid $color-gray-light;
+        border-top-color: $color-primary;
+        animation: spinner 0.6s linear infinite;
     }
+}
 
+#notification-bell {
+    width: 1.5em;
+    height: 1.5em;
+    float: right;
 }
