#206 made notifications user-friendly + stylish

--- a/client/src/pages/home/notification-center.scss
+++ b/client/src/pages/home/notification-center.scss
@@ -14,3 +14,11 @@ ul {
     padding: 0;
     border: 1px solid #ddd;
 }
+
+.notification-list-item {
+    margin-top: 0;
+}
+
+.time-list-item {
+    float: right;
+}
