--- a/client/src/pages/home/notification-center.scss
+++ b/client/src/pages/home/notification-center.scss
@@ -1,27 +1,29 @@
-li {
-    color: black;
-}
-
-.notification-unread {
-    border-left: 5px solid red;
-}
-
-.notification {
-    background-color: #f1f1f1;
-    list-style-type: none;
-    padding: 10px 20px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-    border: 1px solid #ddd;
-}
-
-.notification-list-item {
-    margin-top: 0;
-}
-
-.time-list-item {
-    float: right;
+page-notification-center {
+    li {
+        color: black;
+    }
+    
+    .notification-unread {
+        border-left: 5px solid red;
+    }
+    
+    .notification {
+        background-color: #f1f1f1;
+        list-style-type: none;
+        padding: 10px 20px;
+    }
+    
+    ul {
+        list-style-type: none;
+        padding: 0;
+        border: 1px solid #ddd;
+    }
+    
+    .notification-list-item {
+        margin-top: 0;
+    }
+    
+    .time-list-item {
+        float: right;
+    }
 }
