--- a/fitbit/resources/styles.css
+++ b/fitbit/resources/styles.css
@@ -6,15 +6,7 @@
   fill: #000000;
 }
 
-.warning {
-  font-family: Seville-Book-Italic;
-  font-size: 22;
-  text-anchor: middle;
-  y: 50%;
-  fill: red;
-}
-
-#txtTime {
+.clock-text {
   font-family: Seville-Book;
   font-size: 90;
   text-anchor: middle;
@@ -26,34 +18,33 @@
   fill: #2490DD;
 }
 
-#txtDate {
-  font-family: Seville-Regular;
-  font-size: 26;
-  text-anchor: middle;
-  text-length: 32;
-  x: 50%;
-  y: 64%;
-  width: 92%;
-  height: 8%;
-  fill: #FFFFFF;
-}
-
-#status {
+.text {
   font-family: Seville-Regular;
   font-size: 26;
   text-anchor: middle;
   text-length: 30;
+  fill: #FFFFFF;
+}
+
+.text-main {
   x: 50%;
   y: 64%;
   width: 92%;
   height: 8%;
-  fill: #FFFFFF;
+}
+
+.text-bottom {
+  x: 50%;
+  y: 90%;
+  width: 92%;
+  height: 10%;
+  fill: #2490DD;
 }
 
 #status-icon {
   cx: 10%;
   cy: 90%;
-  r: 5%;
+  r: 25%;
   fill: #FFFFFF;
 }
 
@@ -67,61 +58,5 @@
 
 #status-icon.error {
   fill: #FF0000;
-}
-
-#pin {
-  font-family: Seville-Regular;
-  font-size: 24;
-  text-anchor: middle;
-  text-length: 30;
-  x: 50%;
-  y: 90%;
-  width: 92%;
-  height: 10%;
-  fill: #2490DD;
-}
-
-.divider {
-  x: 4%;
-  width: 92%;
-  height: 1;
-  fill: white;
-}
-
-.divider-top {
-  y: 52%;
-}
-
-.divider-btm {
-  y: 70%;
-}
-
-.stats {
-  x: 50%-111;
-  y: 50%+61;
-  width: 222;
-  height: 50;
-}
-
-.stats text {
-  font-family: Seville-Regular;
-  font-size: 26;
-  text-length: 16;
-  fill: #2490DD;
-}
-
-.stat-left {
-  x: 31;
-}
-
-.stat-right {
-  x: 100%;
-  width: 100%;
-  text-anchor: end;
-}
-
-.icon {
-  width: 26;
-  height: 26;
 }
 
