FeatureFlag test (client settings page), Added a usage documentation.

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -26,7 +26,9 @@
             <li><button (click)="testBaselineWeekPage()">View Baseline Week Page</button></li>
         </ul>
     </nav>
-    <h3>Notification Testing</h3>
+    <h4>Feature Flags</h4>
+    <p>{{featureFlagsString}}</p>
+    <h4>Notification Testing</h4>
     <ul>
         <li><button (click)="testActivitySurvey()">Send Activity Survey</button></li>
         <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
