#243 Morning message logging, #227 + #235 finished
#243 Added logging to every step of morning message clientside
with preface "MORNING MSG: " so we can easily delete later

#235 haven't tested in live dev server but in local testing works fine
#227 creating a new user should set default morning suggestion time to
9am instead of 8am now (as proof that move was successful)

--- a/client/src/pages/home/dashboard-notifications.component.html
+++ b/client/src/pages/home/dashboard-notifications.component.html
@@ -1,12 +1,8 @@
 <nav>
-    <a *ngIf="weeklySurvey"
-        (click)="navigateToWeeklySurvey()"
-        >
+    <a *ngIf="weeklySurvey" (click)="navigateToWeeklySurvey()">
         Please complete the weekly reflection
     </a>
-    <a *ngIf="morningMessage"
-        (click)="navigateToMorningMessage()"
-        >
+    <a *ngIf="morningMessage" (click)="navigateToMorningMessage()">
         Please complete the morning check-in
     </a>
 </nav>
