#244 "not worn" typo fix for dashboard

--- a/server/dashboard/templates/dashboard/participant-activity-summary.html
+++ b/server/dashboard/templates/dashboard/participant-activity-summary.html
@@ -14,7 +14,7 @@
             {% if day.wore_fitbit %}
             <dd>Wore fitbit</dd>
             {% else %}
-            <dd>Not woren</dd>
+            <dd>Not worn</dd>
             {% endif %}
             <dt>Number of Step Count Records</dt>
             <dd>{{day.watch_app_step_counts}}</dd>
