--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><button (click)="editFitbitAuthorization()">Fitbit Authorization</button></li>
-            <li><button (click)="editFitbitWatch()">HeartSteps Clock Face</button></li>
+            <li><button (click)="goToFitbitClockFaceSettings()">Fitbit Clock Face</button></li>
         </ul>
     </nav>
     <p>HeartSteps {{buildVersion}}, built on {{buildDate}}</p>
@@ -22,7 +22,6 @@
     <p>This area is only visible to staff members, and is used to test functionality in the application.</p>
     <nav>
         <ul>
-            <li><button (click)="enterFitbitClockFacePin()">Fitbit Clock Face Pin</button></li>
             <li><button (click)="testBaselineWeekPage()">View Baseline Week Page</button></li>
         </ul>
     </nav>
