#273 Added User Logs to Settings page

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -44,6 +44,11 @@
         </ul>
         </article>
     </ul>
+    <br />
+    <h4>USER LOGS</h4>
+    <ul>
+        <li><button>User Logs for {{participantName}}</button></li>
+    </ul>
 </article>
 <article>
     <h3>Logout</h3>
