#273 More user log integration and error fixes

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -47,7 +47,7 @@
     <br />
     <h4>USER LOGS</h4>
     <ul>
-        <li><button>User Logs for {{participantName}}</button></li>
+        <li><button (click)="testUserLogsPage()">User Logs for {{participantName}}</button></li>
     </ul>
 </article>
 <article>
