--- a/server/dashboard/templates/dashboard/userlogs-list.html
+++ b/server/dashboard/templates/dashboard/userlogs-list.html
@@ -5,10 +5,11 @@
 {% block content %}
 
 {% if is_staff %}
-    <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-        {% csrf_token %}
-        <table class="table-fit">
-            <tr>
+    
+    <table class="table-fit">
+        <tr>
+            <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+                {% csrf_token %}
                 <td>
                     Select a User:
                 </td>
@@ -25,9 +26,24 @@
                         {% endfor %}
                     </select>
                 </td>
-            </tr>
-        </table>
-    </form>
+            </form>
+            <td style="width: auto;">&nbsp;</td>
+            {% if num_pages > 1 %}
+            <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+                <td style="text-align: right; width: 100pt;">
+                    {% csrf_token %}
+                    <input type="hidden" name="selected_user" value="{{ selected_user }}"/>
+                    <select class="form-select form-control m-1" style="width:auto;" id="page" name="page" onchange="this.form.submit()">
+                        {% for page_x in pages %}
+                        <option value="{{ page_x }}" {% if page_x == page %} selected{% endif %}>p. {{ page_x }}</option>
+                        {% endfor %}
+                    </select>
+                </td>
+            </form>
+            {% endif %}        
+        </tr>
+    </table>
+    
 
     {% if logs %}
     <table class="table table-striped table-dark table-hover table-sm">
