--- a/server/dashboard/templates/dashboard/userlogs-list.html
+++ b/server/dashboard/templates/dashboard/userlogs-list.html
@@ -5,114 +5,113 @@
 {% block content %}
 
 {% if is_staff %}
-    
-    <table class="table-fit">
-        <tr>
-            <td>
-                    Select a User:
-                </td>
-                <td>
-                    <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-                    {% csrf_token %}
-                    <select class="form-select form-control m-1" style="width:auto;" id="selected_user" name="selected_user" onchange="this.form.submit()">
-                        {% if selected_user %}
-                            
-                        {% else %}
-                            <option selected>Select a User:</option>
-                        {% endif %}
-                        
-                        {% for user in users %}
-                            <option value="{{ user.username }}" {% if selected_user %} {% if selected_user == user.username %}selected{%endif%}{%endif%}>{{ user.username }}</option>
-                        {% endfor %}
-                    </select>
-                    </form>
-                </td>
-                <td>
-                <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-                    {% csrf_token %}
-                    <input type="hidden" name="selected_user" value="{{ selected_user }}"/>
-                    <input type="hidden" name="page" value="{{ page }}"/>
-                    <button type="submit" class="btn btn-primary mb-2 m-1">Refresh</button>
-                </form>
-                </td>
-            
-            <td style="width: auto;">&nbsp;</td>
-            {% if num_pages > 1 %}
+
+<table class="table-fit">
+    <tr>
+        <td>
+            Select a User:
+        </td>
+        <td>
             <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-                <td style="text-align: right; width: 100pt;">
-                    {% csrf_token %}
-                    <input type="hidden" name="selected_user" value="{{ selected_user }}"/>
-                    <select class="form-select form-control m-1" style="width:auto;" id="page" name="page" onchange="this.form.submit()">
-                        {% for page_x in pages %}
-                        <option value="{{ page_x }}" {% if page_x == page %} selected{% endif %}>p. {{ page_x }}</option>
-                        {% endfor %}
-                    </select>
-                </form>
-                </td>
+                {% csrf_token %}
+                <select class="form-select form-control m-1" style="width:auto;" id="selected_user" name="selected_user"
+                    onchange="this.form.submit()">
+                    {% if selected_user %}
 
-            
+                    {% else %}
+                    <option selected>Select a User:</option>
+                    {% endif %}
+
+                    {% for user in users %}
+                    <option value="{{ user.username }}" {% if selected_user %}
+                        {% if selected_user == user.username %}selected{%endif%}{%endif%}>{{ user.username }}</option>
+                    {% endfor %}
+                </select>
+            </form>
+        </td>
+        <td>
+            <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+                {% csrf_token %}
+                <input type="hidden" name="selected_user" value="{{ selected_user }}" />
+                <input type="hidden" name="page" value="{{ page }}" />
+                <button type="submit" class="btn btn-primary mb-2 m-1">Refresh</button>
+            </form>
+        </td>
+
+        <td style="width: auto;">&nbsp;</td>
+        {% if num_pages > 1 %}
+        <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+            <td style="text-align: right; width: 100pt;">
+                {% csrf_token %}
+                <input type="hidden" name="selected_user" value="{{ selected_user }}" />
+                <select class="form-select form-control m-1" style="width:auto;" id="page" name="page"
+                    onchange="this.form.submit()">
+                    {% for page_x in pages %}
+                    <option value="{{ page_x }}" {% if page_x == page %} selected{% endif %}>p. {{ page_x }}</option>
+                    {% endfor %}
+                </select>
+        </form>
+        </td>
+        <td>
+            <p>Server time: {{server_time}}
+        </td>
+        {% endif %}
+    </tr>
+</table>
 
 
-                <td>
-                    <p>Server time: {{server_time}}
-                </td>
-            {% endif %}        
+{% if logs %}
+<table class="table table-striped table-dark table-hover table-sm">
+    <thead>
+        <td style="width: 30pt;">Timestamp</td>
+        <td style="width: 10pt;">Status</td>
+        <td style="width: auto;">Action</td>
+    </thead>
+    <tbody>
+        {% for log in logs %}
+        <tr style="min-height: 25px; height: 25px;">
+            <td>{{ log.timestamp }}</td>
+            <td>{{ log.status }}</td>
+            <td>{{ log.action }}</td>
         </tr>
-    </table>
-    
-
-    {% if logs %}
-    <table class="table table-striped table-dark table-hover table-sm">
-        <thead>
-            <td style="width: 30pt;">Timestamp</td>
-            <td style="width: 10pt;">Status</td>
-            <td style="width: auto;">Action</td>
-        </thead>
-        <tbody>
-            {% for log in logs %}
-            <tr style="min-height: 25px; height: 25px;">
-                <td>{{ log.timestamp }}</td>
-                <td>{{ log.status }}</td>
-                <td>{{ log.action }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <table class="table">
-        <tr>
-            <td style="width: 100px;">
+        {% endfor %}
+    </tbody>
+</table>
+<table class="table">
+    <tr>
+        <td style="width: 100px;">
             {% if page > 1 %}
-                <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-                    {% csrf_token %}
-                    <input type="hidden" name="selected_user" value="{{ selected_user }}"/>
-                    <input type="hidden" name="page" value="{{ page|add:"-1" }}"/>
-                    <button type="submit" class="btn btn-primary mb-2 m-1">Prev</button>
-                </form>
+            <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+                {% csrf_token %}
+                <input type="hidden" name="selected_user" value="{{ selected_user }}" />
+                <input type="hidden" name="page" value="{{ page|add:"-1" }}" />
+                <button type="submit" class="btn btn-primary mb-2 m-1">Prev</button>
+            </form>
             {% else %}
-                &nbsp;
+            &nbsp;
             {% endif %}
-            </td>
-            <td style="text-align: center;">
-                <p>{{page}} / {{num_pages}}</p>
-            </td>
-            <td style="text-align: right; width: 100px;">
-                {% if page < num_pages %}
-                <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
-                    {% csrf_token %}
-                    <input type="hidden" name="selected_user" value="{{ selected_user }}"/>
-                    <input type="hidden" name="page" value="{{ page|add:"1" }}"/>
-                    <button type="submit" class="btn btn-primary mb-2 m-1">Next</button>
-                </form>
+        </td>
+        <td style="text-align: center;">
+            <p>{{page}} / {{num_pages}}</p>
+        </td>
+        <td style="text-align: right; width: 100px;">
+            {% if page < num_pages %}
+            <form action="{% url 'dashboard-userlogs-list' %}" method="POST" role="form">
+                {% csrf_token %}
+                <input type="hidden" name="selected_user" value="{{ selected_user }}" />
+                <input type="hidden" name="page" value="{{ page|add:"1" }}" />
+                <button type="submit" class="btn btn-primary mb-2 m-1">Next</button>
+            </form>
             {% else %}
-                &nbsp;
+            &nbsp;
             {% endif %}
-            </td>
-        </tr>
+        </td>
+    </tr>
 
-    </table>
-    {% else %}
-    <p>No log exists.</p>
-    {% endif %}
+</table>
+{% else %}
+<p>No log exists.</p>
+{% endif %}
 
 
 {% else %}
