#272 fixed, #262 offline icon added

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -118,3 +118,22 @@ page-home {
     height: 1.5em;
     float: right;
 }
+
+.airplane-mode {
+    width: 1.5em;
+    height: 1.5em;
+    float: left;
+}
+
+#page-title {
+    margin: 0;
+    padding: 0;
+    padding-left: 30px;
+    color: black;
+}
+
+#page-title-offline {
+    margin: 0;
+    padding: 0;
+    color: black;
+}
