--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -1,16 +1,48 @@
-{% extends 'dashboard/base.html' %}
-{% load static %}
-{% load template_filters %}
-
-{% block navigation %}
-<a href="{% url 'dashboard-cohort-participants' cohort.id %}" class="nav-link active">{{cohort.name}}</a>
-<a href="{% url 'dashboard-cohort-participant-create' cohort.id %}" class="nav-link">Add participant</a>
-<a href="{% url 'dashboard-cohort-intervention-summary' cohort.id %}" class="nav-link">Intervention Summaries</a>
-<a href="{% url 'dashboard-cohort-messages-received' cohort.id %}" class="nav-link">Messages Received</a>
-<a href="{% url 'dashboard-cohort-data-summary' cohort.id %}" class="nav-link">Data Summary</a>
-<a href="{% url 'dashboard-cohort-download' cohort.id %}" class="nav-link">Download</a>
-<a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
-<a href="{% url 'dashboard-cohort-burst-periods' cohort.id %}" class="nav-link">Burst Periods</a>
-<a href="{% url 'dashboard-cohort-daily-tasks' cohort.id %}" class="nav-link">Daily Tasks</a>
-<a href="{% url 'dashboard-cohort-morning-messages' cohort.id %}" class="nav-link">Morning Messages</a>
+{% extends 'dashboard/base.html' %} {% load static %} {% load template_filters
+%} {% block navigation %}
+<a
+  href="{% url 'dashboard-cohort-participants' cohort.id %}"
+  class="nav-link active"
+  >{{cohort.name}}</a
+>
+<a
+  href="{% url 'dashboard-cohort-participant-create' cohort.id %}"
+  class="nav-link"
+  >Add participant</a
+>
+<a href="{% url 'dashboard-cohort-participant-feature-flags' cohort.id %}"
+  >Feature Flags</a
+>
+<a
+  href="{% url 'dashboard-cohort-intervention-summary' cohort.id %}"
+  class="nav-link"
+  >Intervention Summaries</a
+>
+<a
+  href="{% url 'dashboard-cohort-messages-received' cohort.id %}"
+  class="nav-link"
+  >Messages Received</a
+>
+<a href="{% url 'dashboard-cohort-data-summary' cohort.id %}" class="nav-link"
+  >Data Summary</a
+>
+<a href="{% url 'dashboard-cohort-download' cohort.id %}" class="nav-link"
+  >Download</a
+>
+<a
+  href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}"
+  class="nav-link"
+  >Closeout Summary</a
+>
+<a href="{% url 'dashboard-cohort-burst-periods' cohort.id %}" class="nav-link"
+  >Burst Periods</a
+>
+<a href="{% url 'dashboard-cohort-daily-tasks' cohort.id %}" class="nav-link"
+  >Daily Tasks</a
+>
+<a
+  href="{% url 'dashboard-cohort-morning-messages' cohort.id %}"
+  class="nav-link"
+  >Morning Messages</a
+>
 {% endblock %}
