#285 added participant_form skeleton and added cohort feature flags field

--- a/server/dashboard/templates/dashboard/participant-feature-flags.html
+++ b/server/dashboard/templates/dashboard/participant-feature-flags.html
@@ -2,7 +2,7 @@
 <form action="" method="POST" novalidate>
   {% csrf_token %}
   <legend>Update feature flags</legend>
-  {% for field in form %}
+  {% for field in study_form %}
   <div class="form-group">
     {{ field.label_tag }} {{ field }} {{ field.errors }}
   </div>
