#285 cohort feature flags now editable in form

--- a/server/dashboard/templates/dashboard/participant-feature-flags.html
+++ b/server/dashboard/templates/dashboard/participant-feature-flags.html
@@ -6,6 +6,10 @@
   <div class="form-group">
     {{ field.label_tag }} {{ field }} {{ field.errors }}
   </div>
+  {% endfor %} {% for field in cohort_form %}
+  <div class="form-group">
+    {{ field.label_tag }} {{ field }} {{ field.errors }}
+  </div>
   {% endfor %}
   <input type="submit" value="Update" />
 </form>
